testsuite/bsc.bsv05/import-foreign/ImportForeignModule_Method_ClockedBy_UndeclaredClk.bsv.bsc-out.expected
checking package dependencies
Error: "ImportForeignModule_Method_ClockedBy_UndeclaredClk.bsv", line 5, column 37: (P0134)
  undeclared clock `foo'
